--- a/CurrencyApp/CurrencyApp.csproj
+++ b/CurrencyApp/CurrencyApp.csproj
@@ -11,4 +11,8 @@
   <ItemGroup>
     <Folder Include="Views\News\" />
   </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <PackageReference Include="Json.Net" Version="1.0.18" />
+  </ItemGroup>
 </Project>
