Added skeleton of new page and request data model

--- a/CurrencyApp/CurrencyApp.csproj
+++ b/CurrencyApp/CurrencyApp.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <Folder Include="Views\News\" />
+    <Folder Include="Views\Data\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
