--- a/CurrencyApp/CurrencyApp.csproj
+++ b/CurrencyApp/CurrencyApp.csproj
@@ -16,5 +16,6 @@
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="Json.Net" Version="1.0.18" />
+    <PackageReference Include="NewsAPI" Version="0.5.0" />
   </ItemGroup>
 </Project>
