--- a/CurrencyApp/CurrencyApp.csproj
+++ b/CurrencyApp/CurrencyApp.csproj
@@ -12,6 +12,7 @@
     <Folder Include="Views\News\" />
     <Folder Include="Views\Data\" />
     <Folder Include="Shared\" />
+    <Folder Include="Helpers\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
